# JournalAI

./: .gitignore  README.md  app.config.ts  jest.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
__mocks__/: whisper.rn.js
app/: _layout.tsx  brain.tsx  settings.tsx
app/(tabs)/: _layout.tsx  index.tsx  two.tsx
app/note/: [id].tsx
components/: AuthGuard.tsx
constants/: AIEngine.ts
legacy/components/: AuthGuard.tsx  NerdLogo.tsx
legacy/constants/: Colors.ts
plugins/: withAndroidLanNetwork.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/patches/cookie/: Cargo.toml
src-tauri/patches/cookie/src/: expiration.rs
src-tauri/src/: lan_sync.rs  lib.rs  main.rs
src/ai/: AiContext.tsx  aiService.ts  askNotes.ts  enrichNote.ts  geminiService.ts  providerCascade.ts  sanitize.ts  tfidf.ts  transcribeAudio.ts
src/attachments/: pickFile.ts  pickImage.ts
src/components/: AiAssistant.tsx  AskModal.tsx  AttachmentList.tsx  AttachmentPicker.tsx  AuthGuard.tsx  ConflictResolutionModal.tsx  LinkInput.tsx  NerdLogo.tsx  NoteCard.tsx  NoteEditor.tsx  PrivacyConsentDialog.tsx  RelatedNotes.tsx  Sparkline.tsx  StatsStrip.tsx  VoiceRecorder.tsx
src/crypto/: VaultContext.tsx  biometricUnlock.native.ts  biometricUnlock.ts  encoding.ts  secureSecrets.native.ts  secureSecrets.ts  vaultService.ts
src/db/: database.ts  testDb.ts  types.ts
src/export/: markdownExport.ts
src/lib/: urlValidation.ts
src/notes/: Note.ts  NotesContext.tsx  (+3 more)
(+63 files in other folders)
