[package]
name = "cookie"
version = "0.18.1"
edition = "2018"
description = "HTTP cookie parsing and cookie jar management."
license = "MIT OR Apache-2.0"
repository = "https://github.com/SergioBenitez/cookie-rs"
build = "build.rs"

[dependencies]
percent-encoding = { version = "2.0", optional = true }
time = { version = "0.3", default-features = false, features = ["std", "parsing", "formatting", "macros"] }
aes-gcm  = { version = "0.10.0", optional = true }
base64   = { version = "0.22",   optional = true }
hkdf     = { version = "0.12.0", optional = true }
hmac     = { version = "0.12.0", optional = true }
rand     = { version = "0.8",    optional = true }
sha2     = { version = "0.10.0", optional = true }
subtle   = { version = "2.3",    optional = true }

[build-dependencies]
version_check = "0.9.4"

[features]
percent-encode = ["percent-encoding"]
private = ["aes-gcm", "base64", "rand", "subtle"]
signed  = ["hmac", "sha2", "base64", "rand", "subtle"]
key-expansion = ["sha2", "hkdf"]
secure  = ["private", "signed", "key-expansion"]
